// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.Pay.PayHeader generic should render correctly 1`] = `
<Text
  textAlign="center"
>
  <styled.div
    css={
      Object {
        "height": "55px",
      }
    }
    mx="auto"
  >
    <SvgPaperPlane
      height="35px"
      width="35px"
    />
  </styled.div>
  <Heading1
    mx="auto"
  >
    Send Bitcoin
  </Heading1>
  <Heading4
    mx="auto"
  >
     
     
  </Heading4>
</Text>
`;

exports[`component.Pay.PayHeader offchain should render correctly 1`] = `
<Text
  textAlign="center"
>
  <styled.div
    css={
      Object {
        "height": "55px",
      }
    }
    mx="auto"
  >
    <SvgLightning
      height="45px"
      width="45px"
    />
  </styled.div>
  <Heading1
    mx="auto"
  >
    Send Bitcoin
  </Heading1>
  <Heading4
    mx="auto"
  >
     
     
    Lightning Payment
  </Heading4>
</Text>
`;

exports[`component.Pay.PayHeader onchain should render correctly 1`] = `
<Text
  textAlign="center"
>
  <styled.div
    css={
      Object {
        "height": "55px",
      }
    }
    mx="auto"
  >
    <SvgOnchain
      height="45px"
      width="45px"
    />
  </styled.div>
  <Heading1
    mx="auto"
  >
    Send Bitcoin
  </Heading1>
  <Heading4
    mx="auto"
  >
     
    On-Chain Payment
     
  </Heading4>
</Text>
`;
